fixed getbyuserid field team to teams
